# fansly-downloader-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
src/: error.rs  lib.rs  main.rs
src/api/: auth.rs  client.rs  mod.rs  types.rs  websocket.rs
src/cli/: args.rs  mod.rs
src/config/: config.rs  loader.rs  mod.rs  modes.rs  validation.rs
src/dedup/: hash.rs  mod.rs  service.rs  tracker.rs
src/download/: collections.rs  m3u8.rs  media.rs  messages.rs  mod.rs  single.rs  state.rs  timeline.rs
src/fs/: mod.rs  naming.rs  paths.rs
src/media/: item.rs  mod.rs  parser.rs
src/output/: console.rs  mod.rs  progress.rs  stats.rs
