[package]
name = "fansly-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "CLI tool to download content from Fansly creators"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration
toml = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
indicatif = "0.17"

# Hashing
md-5 = "0.10"
image = "0.25"
image_hasher = "2.0"

# M3U8 parsing
m3u8-rs = "6.0"

# URL parsing
url = "2.5"

# Random number generation
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Directory handling
directories = "5.0"

# MIME type detection
mime_guess = "2.0"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Regex for validation
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
